# restaurant-menu-API

./: .docker-test.env  .docker.env  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile copy  Dockerfile.celery  Makefile  README.md  alembic.ini  config.py  docker-compose.rabbit.yml  docker-compose.test.yml  docker-compose.yml  dump.rdb  env.py  pyproject.toml
.github/workflows/: Project_CI.yml
docker_env/: .env
migrations/: env.py
migrations/versions/: 25296b660769_creating_tables.py  57ae203379b9_creating_tables.py  5eb0d5480c58_creating_tables.py  e28ee2b987fc_creating_tables.py  e986f6461966_add_index_for_tables_id_s.py  f2ec47265693_creating_tables.py  f7c9fc0bf206_creating_tables.py
restaurant_menu_app/: __init__.py  cache.py  crud.py  database.py  main.py  models.py  redis_storage.py  schemas.py
restaurant_menu_app/db/cache/: abstract_cache.py  cache_operations.py  cache_settings.py  cache_utils.py
restaurant_menu_app/db/main_db/: crud.py  database.py
restaurant_menu_app/models/: model.py
restaurant_menu_app/schemas/: scheme.py
restaurant_menu_app/services/: data_generator.py  dishes.py  helper.py  menus.py  service.py  service_mixin.py  submenus.py  tasks.py
restaurant_menu_app/services/data/: prepared_data.json
restaurant_menu_app/tasks/: tasks.py  tasks_app.py  tasks_config.py
tests/: conftest.py  test_api.py  test_dishes.py  test_menus.py  test_submenus.py
tests/fixtures/: dishes_fixtures.py  menus_fixtures.py  submenus_fixtures.py
ylab_project/: app.py
(+11 files in other folders)
